--- a/curs1/ap9.html
+++ b/curs1/ap9.html
@@ -9,8 +9,36 @@
   <body>
     <h1>Operatori</h1>
     <script>
-      var a = 6;
+      var a = "6";
       var b = 24;
+      var x = 13;
+      var y = "26";
+      var suma, suma2, impartire;
+
+      suma = a + b;
+      suma2 = x + y;
+      // impartire = b / a;
+      impartire = y / x;
+
+      // document.write('<p> Suma este : ' + suma + '</p>');
+      // document.write(`<p> Suma este : ${suma2} </p>`);
+      // document.write(`<p> Impartirea este : ${impartire} </p>`);
+
+      //   var top10 = 10;
+      //   console.log(--top10);
+      //   console.log("sunt in top pe pozitia", top10);
+
+      //   var clasament = 10;
+      //   console.log(clasament--);
+
+      //   console.log("sunt in clasament pe pozitia", clasament);
+
+      //   console.log(clasament--);
+      //   console.log("sunt in clasament pe pozitia", clasament);
+
+      //   x = x + 2;
+      x += 2;
+      console.log("noua valoare a lui x este", x);
     </script>
   </body>
 </html>
