--- a/curs1/ap9.html
+++ b/curs1/ap9.html
@@ -11,8 +11,8 @@
     <script>
       var a = "6";
       var b = 24;
-      var x = 13;
-      var y = "26";
+      var x = 29;
+      var y = "29";
       var suma, suma2, impartire;
 
       suma = a + b;
@@ -37,8 +37,17 @@
       //   console.log("sunt in clasament pe pozitia", clasament);
 
       //   x = x + 2;
-      x += 2;
-      console.log("noua valoare a lui x este", x);
+      //   x += 2;
+      //   console.log("Noua valoare a lui x este", x);
+
+      //   x=y;
+      //   console.log('Noua valoarea a lui x este :', x);
+      //   console.log(x==y);
+      console.log(x === y);
+
+
+
+      
     </script>
   </body>
 </html>
