--- a/curs1/ap9.html
+++ b/curs1/ap9.html
@@ -43,9 +43,17 @@
       //   x=y;
       //   console.log('Noua valoarea a lui x este :', x);
       //   console.log(x==y);
-      console.log(x === y);
+      //   console.log(x === y);
+      //   console.log(x !== y);
+      //   console.log(a < b && x === y);
+      //   console.log(a < b || x === y);
 
+      //   console.log(!(a<b));
 
+      //   console.log (a > b && x == 20);
+      //   console.log( x );
+
+      console.log((a > b) ? "Adevarat" : "Fals");
 
       
     </script>
