--- a/curs2/ap11.html
+++ b/curs2/ap11.html
@@ -8,19 +8,15 @@
   </head>
   <body>
     <script>
-      let n = eval(prompt("Introduceti un numar", 10));
-      let i = 1;
-      while (i < n) {
+      let n = eval(prompt("introduceti un numar", 10));
+      let m = eval(prompt("introduceti numarul care sa nu apara in consola", 10));
+      for (let i = 1; i <= n; i++) {
+        if (i == m) {
+          continue;
+        }
+
         console.log(i);
-        // if (i % 2 == 1) {
-        //   console.log(i);
-        i += 2;
       }
-      let j = 1;
-      do {
-        console.log(j);
-        j+= 2;
-      } while (j <= n);
     </script>
   </body>
 </html>
