--- a/curs2/ap12.html
+++ b/curs2/ap12.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .glob {
+    <title>ap12</title>
+    <!-- <style>
+      /* .glob {
         color: red;
         font-weight: bold;
-      }
-    </style>
+      } */
+    </style> -->
   </head>
   <body>
     <script>
-      let n = 8;
-      for (let i = 1; i <= n; i++) {
-        for (let j = 1; j <= i; j++) {
-            if(j%2 ==0) { 
-          document.write('<span class ="glob"> * </span>');
-        } else {
-            document.write('<span class ="glob"> * </span>');
-        }
-            
-        document.write('<br/>');
-    }}
-      
+      // let n = 8;
+      //   /*for (let i = 1; i <= n; i++) {
+      //     for (let j = 1; j <= i; j++) {
+      //         if(j%2 ==0) {
+      //       document.write('<span class ="glob"> * </span>');
+      //     } else {
+      //         document.write('<span class ="glob"> * </span>');
+      //     }
+
+      //     document.write('<br/>');
+      // }}
+
+      // let x = 1;
+      // let y = parseInt("3");
+      // let z = x + y;
+
+      //console.log(z);
+
+
+
     </script>
   </body>
 </html>
