--- a/curs2/ap8.html
+++ b/curs2/ap8.html
@@ -11,13 +11,16 @@
 let n = eval(prompt('va rugam sa introduceti un numar',15));
 let sum = 0;
 console.time('Start');
-for (let i = 0; i<=n; i=i+2){
+
+for (let i = 0; i<=n; i+=2){
         if (i % 2 == 0){
-        sum = sum + i;
+            sum = sum + i;
+            
     }
     console.log(i);
 }
 console.log('suma este ', sum);
+
 console.timeEnd('Start');
 
 </script>
