--- a/curs3/ap6.html
+++ b/curs3/ap6.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+</head>
 
-  <body>
+<body>
     <script>
-      let grades = [
-        [12, 14, 16, 18, 20],
-        [16, 28, 32],
-        [23, 43, 53],
-      ];
-      console.log(grades);
-        for (let i = 0; i < grades.length; i++) {
-          console.log(grades[i]);
-          for (let j = 0; j < grades[i].length; j++) {
-            console.log(grades[i][j]);
-          }
-        }
+        //   let grades = [
+        //     [12, 14, 16, 18, 20],
+        //     [16, 28, 32],
+        //     [23, 43, 53],
+        //   ];
+        //   console.log(grades);
+        //     for (let i = 0; i < grades.length; i++) {
+        //       console.log(grades[i]);
+        //       for (let j = 0; j < grades[i].length; j++) {
+        //         console.log(grades[i][j]);
+        //       }
+        //     }
+
+        // let arrayA = prompt('va rog introduceti primul string de caractere')
+        // let arrayB = prompt('va rog introduceti al doilea string de caractere')
+
+        // arrayA = arrayA.split(' ');
+        // arrayA = arrayB.split(' ');
+
+        // let finalArray = [];
+
+        // for (let i = 0; i < arrayA.length; i++) {
+        //     finalArray[i] = arrayA[i];
+        // }
+        // for (let i = 0; i < arrayB.length; i++) {
+        //     finalArray[arrayA.length + i] = arrayB[i];
+        // }
+        // alert(finalArray.toString());
+
+
+
+        var numbers = [1, 2, 5, 8, 12, -1, 44, 4, 66];
+        var pos = numbers.indexOf(33);
+        console.log(pos);
+
     </script>
-  </body>
+</body>
 
 </html>
