--- a/curs5/ap3.html
+++ b/curs5/ap3.html
@@ -25,8 +25,8 @@
     <script>
         var new_pass = document.getElementById('password');
         function pass_gen() {
-            let lungime = +eval(prompt('Va rugam sa introduceti lungimea parolei '12))
-            if (typeof lungime == 'numnber' && lungime >= 6) {
+            let lungime = +eval(prompt('Va rugam sa introduceti lungimea parolei ', 12));
+            if (typeof lungime == 'number' && lungime >= 6) {
                 new_pass.innerHTML = newPassword(lungime);
             } else {
                 alert('va rugam sa introduceti o valoare numerica >=6')
@@ -36,8 +36,8 @@
         function newPassword(n) {
             var pass = ' ';
             var str = ' ABCDEFGHIJKLMNOPQRSTUVWYZ' +
-                'abcedefghijklmonpqrstuvwyz0123456789@$!';
-            for (i = 1; i <= n; i++) {
+                'abcedefghijklmonpqrstuvwyz0123456789@(!';
+            for (let i = 1; i <= n; i++) {
                 var char = Math.floor(Math.random() * str.length + 1);
                 pass += str.charAt(char);
             }
