--- a/curs3/ap8.html
+++ b/curs3/ap8.html
@@ -10,6 +10,7 @@
 
 <body>
     <script>
+
         function inmultire(a, b) {
             return a * b;
         }
@@ -55,18 +56,18 @@
             'a - adunare, s - scadere, im - impartire, in - inmultire',);
 
         if (operatie == 'a') {
-            console.log('rezultatul adunarii este ', adunare(x, y))
+            prompt('rezultatul adunarii este ', adunare(x, y))
         };
 
         if (operatie == 's') {
-            console.log('rezultatul scaderii este ', scadere(x, y))
+            prompt('rezultatul scaderii este ', scadere(x, y))
         };
 
         if (operatie == 'in') {
-            console.log('rezultatul inmultirii este ', inmultire(x, y))
+            prompt('rezultatul inmultirii este ', inmultire(x, y))
         };
         if (operatie == 'im') {
-            console.log('rezultatul impartirii este ', impartire(x, y))
+            prompt('rezultatul impartirii este ', impartire(x, y))
         };
 
     </script>
