--- a/curs6/ap1.html
+++ b/curs6/ap1.html
@@ -57,7 +57,8 @@
         st1.mergeLaExamen(8);
 
         console.log(st1.nota1, st1.nota2);
-        
+        st2.calMedia();
+        console.log('Media este : ', st1.calMedia());
 
     </script>
 </body>
