--- a/curs8/toDoList/index.html
+++ b/curs8/toDoList/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="app">
-        <h4>Lista cumparaturi</h4>
+        <h2>Lista cumparaturi</h2>
         <form onsubmit="return false" action="#">
             <input type="text" name="product" id="product" placeholder="Adauga produs...">
             <input type="submit" id="add" value="+" title="Adauga" alt="Adauga">
@@ -20,12 +20,12 @@
 
         <div id="todos">
             <ul id="list">
-                <!-- <li class='product'>apa <span class='sterge'>Sterge</span></li> -->
+                <!-- <li class='product'> <span class='sterge'>Sterge</span></li> -->
             </ul>
         </div>
     </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
 
 
 </body>
